--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ website/node_modules
 
 website/vendor
 
+scratch/
+
 # Test exclusions
 !command/test-fixtures/**/*.tfstate
 !command/test-fixtures/**/.terraform/
