--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3.3.1
       with:
-        go-version: '1.17'
+        go-version-file: go.mod
       id: go
 
     - name: Check out code into the Go module directory
@@ -59,7 +59,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3.3.1
       with:
-        go-version: '1.17'
+        go-version-file: go.mod
       id: go
 
     - name: Check out code into the Go module directory
