--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
         name: Set up Go
         uses: actions/setup-go@v3.3.1
         with:
-          go-version: 1.17
+          go-version-file: go.mod
       -
         name: Import GPG key
         id: import_gpg
